--- a/index.html
+++ b/index.html
@@ -11,8 +11,35 @@
 </head>
 
 <body>
+    <header>
+        <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
+            <div class="container-fluid">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarText">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="basics.html">Basics</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="kata.html">Kata</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="kumite.html">Kumite</a>
+                        </li class="nav-item">
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
     <section>
-<!-----------------Common Japanese Terms Table--------------------->
+        <!-----------------Common Japanese Terms Table--------------------->
+
         <table>
             <tr>
                 <td>Common Japanese Terms</td>
