--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 <body>
     <header>
+<!------------------Nav bar----------------->
         <nav class="navbar navbar-dark bg-dark navbar-expand-sm">
             <div class="container-fluid">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
