Added accordian and up to yellow belt basics

--- a/basics.html
+++ b/basics.html
@@ -76,13 +76,14 @@
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#kick">Kicks</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#block">Blocks</a></li>
             <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#combo">Combinations</a></li>
+            <li class="nav-item"><a class="nav-link" data-bs-toggle="tab" href="#accord">Accordian test</a></li>
         </ul>
 
         <div class="tab-content">
             <div class="tab-pane fade show active">
                 Here are the basic moves you need to learn for each belt:
             </div><br>
-<!------------Punches------------>
+            <!------------Punches------------>
             <div id="punch" class="tab-pane fade" role="tabpanel">
                 <div>
                     <h5 class="h5--orange">White to Orange</h5>
@@ -105,7 +106,7 @@
                     <p><strong>Sanbon Tsuki </strong></p>
                 </div>
             </div>
-<!------------Kicks------------>
+            <!------------Kicks------------>
             <div id="kick" class="tab-pane fade" role="tabpanel">
                 <div>
                     <h5 class="h5--orange">White to Orange</h5>
@@ -128,7 +129,7 @@
                     <p><strong>Sanbon Tsuki </strong></p>
                 </div>
             </div>
-<!------------Blocks------------>
+            <!------------Blocks------------>
             <div id="block" class="tab-pane fade" role="tabpanel">
                 <div>
                     <h5 class="h5--orange">White to Orange</h5>
@@ -153,7 +154,7 @@
                     <p><strong>Sanbon Tsuki </strong></p>
                 </div>
             </div>
-<!------------Combinations------------>
+            <!------------Combinations------------>
             <div id="combo" class="tab-pane fade" role="tabpanel">
                 <div>
                     <h5 class="h5--orange">White to Orange</h5>
@@ -176,6 +177,152 @@
                     <p>Sanbon Tsuki - Triple punch</p>
                 </div>
 
+            </div>
+            <!------------Accordian try------------>
+            <div id="accord" class="tab-pane fade" role="tabpanel">
+                <!-- Orange Belt -->
+                <div class="card">
+                    <div class="card-header card-header--orange">
+                        <a class="btn " data-bs-toggle="collapse" href="#collapseOne">
+                            White to Orange
+                        </a>
+                    </div>
+                    <div id="collapseOne" class="collapse" data-bs-parent="#accordion">
+                        <div class="card-body">
+                            <div class="table-responsive">
+                                <table class="table">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">Punches</th>
+                                            <th scope="col">Blocks</th>
+                                            <th scope="col">Kicks</th>
+                                            <th scope="col">Combinations</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td><strong>Oi Zuki </strong>Stepping punch</td>
+                                            <td><strong>Age-uke </strong>Rising block</td>
+                                            <td><strong>Mae-geri </strong>Front kick</td>
+                                            <td>-</td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                            <td><strong>Soto-uke </strong>Outside block</td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                        <tr>
+                                            <td></td>
+                                            <td><strong>Uchi-uke </strong>Inside block</td>
+                                            <td></td>
+                                            <td></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- Red Belt -->
+                <div class="card">
+                    <div class="card-header card-header--red">
+                        <a class="btn" data-bs-toggle="collapse" href="#collapse2">
+                            Orange to Red
+                        </a>
+                    </div>
+                    <div id="collapse2" class="collapse" data-bs-parent="#accordion">
+                        <div class="card-body">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Punches</th>
+                                        <th scope="col">Blocks</th>
+                                        <th scope="col">Kicks</th>
+                                        <th scope="col">Combinations</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><strong>Oi Zuki </strong>Stepping punch</td>
+                                        <td><strong>Age-uke </strong>Rising block</td>
+                                        <td><strong>Mae-geri </strong>Front kick</td>
+                                        <td>-</td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><strong>Soto-uke </strong>Outside block</td>
+                                        <td><strong>Yoko Kekomi </strong>Side Thrusting Kick</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><strong>Uchi-uke </strong>Inside block</td>
+                                        <td><strong>Yoko Keage </strong>Side Rising Kick</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><strong>Shuto-uke </strong>Knife-hand block</td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <!-- Yellow Belt -->
+                <div class="card">
+                    <div class="card-header card-header--yellow">
+                        <a class="btn" data-bs-toggle="collapse" href="#collapse3">
+                            Red to Yellow
+                        </a>
+                    </div>
+                    <div id="collapse3" class="collapse" data-bs-parent="#accordion">
+                        <div class="card-body">
+                            <table class="table">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Punches</th>
+                                        <th scope="col">Blocks</th>
+                                        <th scope="col">Kicks</th>
+                                        <th scope="col">Combinations</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td><strong>Oi Zuki </strong>Stepping punch</td>
+                                        <td><strong>Age-uke </strong>Rising block</td>
+                                        <td><strong>Mae-geri </strong>Front kick</td>
+                                        <td><strong>Age-uke, Gyaku-zuki </strong>Rising block, reverse punch</td>
+                                    </tr>
+                                    <tr>
+                                        <td><strong>Sanbon Zuki </strong>Triple punch</td>
+                                        <td><strong>Soto-uke </strong>Outside block</td>
+                                        <td><strong>Yoko Kekomi </strong>Side Thrusting Kick</td>
+                                        <td><strong>Soto-uke, Gyaku-zuki </strong>Outside block, reverse punch</td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><strong>Uchi-uke </strong>Inside block</td>
+                                        <td><strong>Yoko Keage </strong>Side Rising Kick</td>
+                                        <td><strong>Uchi-uke, Gyaku-zuki </strong>Inside block, reverse punch</td>
+                                    </tr>
+                                    <tr>
+                                        <td></td>
+                                        <td><strong>Shuto-uke </strong>Knife-hand block</td>
+                                        <td></td>
+                                        <td></td>
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+                <!-- Green Belt -->
+
+                <!-- Purple Belt -->
             </div>
         </div>
     </div>
